versioned_docs/version-2025.2.1/professor/karina_dias_espartosa.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Karina Dias Espartosa",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Biologia 3 - 202",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "EIN2023"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Biologia II - 2420",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "COM2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Biologia II - 616",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "AGO2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Biologia II - 1228",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "IIW2024A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Sistemática vegetal I - 660",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Sistemática vegetal I - 660",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
        
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        
        {
          "subject": "Sistemática vegetal II - 800",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
        ,
        {
          "subject": "Sistemática vegetal II - 800",
          "size": 1,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "21:50 - 22:40",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        
        {
          "subject": "Trabalho de conclusão de curso I - 484",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes",
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "BIO_ESPECIAL_2"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Trabalho de conclusão de curso II - 1420",
          "size": 1,
          "teachers": [
            "Jhones Donizetti Mendes",
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "BIO_ESPECIAL_2"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": []
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Karina Dias Espartosa

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
